@@ -1,5 +1,5 @@
 {
-    "@timestamp": "2016-05-23T08:05:34.853Z",
+    "@timestamp": "2017-09-30T12:03:14.242Z",
     "beat": {
         "hostname": "host.example.com",
         "name": "host.example.com"
@@ -13,15 +13,23 @@
     "php_fpm": {
         "pool": {
             "connections": {
-                "accepted": 13,
+                "accepted": 28729,
+                "listen_queue_len": 128,
+                "max_listen_queue": 1,
                 "queued": 0
             },
-            "pool": "www",
+            "name": "www",
+            "process_manager": "dynamic",
             "processes": {
-                "active": 1,
-                "idle": 2
+                "active": 2,
+                "idle": 3,
+                "max_active": 8,
+                "max_children_reached": 2,
+                "total": 5
             },
-            "slow_requests": 0
+            "slow_requests": 0,
+            "start_since": 171707,
+            "start_time": 1506604034
         }
     },
     "type": "metricsets"
