@@ -105,6 +105,7 @@ https://github.com/elastic/beats/compare/v6.0.0-beta2...master[Check the HEAD di
 - Add system uptime metricset. {issue}[4848[4848]
 - Add `filesystem.ignore_types` to system module for ignoring filesystem types. {issue}4685[4685]
 - Add experimental `queue` metricset to RabbitMQ module. {pull}4788[4788]
+- Add additional php-fpm pool status kpis for Metricbeat module {pull}5287[5287]
 
 *Packetbeat*
 
